p2ws_package/Devpp2ws-Package/objects/LOPA_Label__mdt.object
<CustomObject>
    <fields>
        <fullName>Actual_Label__c</fullName>
        <label>Actual Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cabin_Version__c</fullName>
        <label>Cabin Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Label__c</fullName>
        <description>Temporary label that is generated by code</description>
        <label>Temp Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LOPA Label</label>
    <pluralLabel>LOPA Labels</pluralLabel>
</CustomObject>